--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,8 @@ deploy:
   app: multi-docker
   env: MultiDocker-env
   bucket_name: elasticbeanstalk-us-east-2-104076573636
-  bucket_path: docker-multi
+  bucket_path: multi-docker-kards-deployer
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: $AWS_SECRET_KEY
+  secret_access_key: $AWS_SECRET_KEY
